# TestTaskBewise

./: README.md  docker-compose.yml
app/: Dockerfile  app.sh  pyproject.toml
app/app/: alembic.ini
app/app/migrations/: env.py
app/app/migrations/versions/: 8173dfb0f53d_.py
app/app/src/: db.py  main.py  settings.py
app/app/src/questions/: model.py  router.py  service.py
