[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Eugene <eugene.kochetov02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"
python-dotenv = "^1.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.22"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
alembic = "^1.12.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.28.0"
gunicorn = "^21.2.0"
fastapi = "^0.104.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
